src/objects/c2g__codaCurrencyRevalBatch__c.object
<CustomObject>
    <description>Processes currency revaluation documents into batches.</description>
    <fields>
        <fullName>c2g__CurrencyRevaluationBatchNumber__c</fullName>
        <displayFormat>CRB{000000}</displayFormat>
        <label>Currency Revaluation Batch Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyRevaluationBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation Batch</label>
        <referenceTo>c2g__codaCurrencyRevalBatch__c</referenceTo>
        <relationshipLabel>Currency Revaluation Batches</relationshipLabel>
        <relationshipName>CurrencyRevaluationBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyRevaluationGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation Group</label>
        <referenceTo>c2g__codaCurrencyRevaluationGroup__c</referenceTo>
        <relationshipLabel>Currency Revaluation Batches</relationshipLabel>
        <relationshipName>CurrencyRevaluationBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyRevaluation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Revaluation</label>
        <referenceTo>c2g__codaCurrencyRevaluation__c</referenceTo>
        <relationshipLabel>Currency Revaluation Batches</relationshipLabel>
        <relationshipName>CurrencyRevalBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ErrorDescription__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__HasErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Posting Error</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Canceling Error</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post</fullName>
                    <default>true</default>
                    <label>Post</label>
                </value>
                <value>
                    <fullName>Reversal</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Currency Revaluation Batch</label>
    <nameField>
        <label>Currency Revaluation Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Revaluation Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>